--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@prisma/client": "^6.12.0",
     "@types/crypto-js": "^4.2.2",
     "axios": "^1.11.0",
+    "bullmq": "^5.56.9",
     "crypto-js": "^4.2.0",
     "framer-motion": "^12.23.3",
+    "ioredis": "^5.7.0",
     "jose": "^6.0.12",
     "next": "15.3.5",
     "prisma": "^6.12.0",
