--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jose": "^6.0.12",
     "next": "15.3.5",
     "prisma": "^6.12.0",
+    "puppeteer": "^24.16.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
