--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "next": "15.3.5",
     "prisma": "^6.12.0",
     "puppeteer": "^24.16.1",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
