--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@heroui/react": "^2.7.11",
     "@prisma/client": "^6.12.0",
+    "@stripe/react-stripe-js": "^4.0.0",
+    "@stripe/stripe-js": "^7.9.0",
     "@types/crypto-js": "^4.2.2",
     "axios": "^1.11.0",
     "bullmq": "^5.56.9",
@@ -27,6 +29,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-pro-sidebar": "^1.1.0",
+    "stripe": "^18.5.0",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
