--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-icons": "^5.5.0",
     "react-pro-sidebar": "^1.1.0",
     "stripe": "^18.5.0",
+    "uuid": "^13.0.0",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
