--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.11.0",
     "bullmq": "^5.56.9",
     "crypto-js": "^4.2.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.3",
     "ioredis": "^5.7.0",
     "jose": "^6.0.12",
