--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/crypto-js": "^4.2.2",
     "axios": "^1.11.0",
     "bullmq": "^5.56.9",
+    "chart.js": "^4.5.0",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.3",
@@ -27,6 +28,7 @@
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-pro-sidebar": "^1.1.0",
